syntax = "proto3";
package mapnificent;


message MapnificentNetwork {
  string Cityid = 1;

  message Stop {
    double Latitude = 1;
    double Longitude = 2;

    message TravelOption {
      uint32 Stop = 1;
      uint32 TravelTime = 2;
      uint32 StayTime = 3;
      string Line = 4;
      uint32 WalkDistance = 5;
    }
    repeated TravelOption TravelOptions = 3;
    string Name = 4;
  }
  repeated Stop Stops = 2;

  message Line {
    string LineId = 1;
    message LineTime {
      uint32 Interval = 1;
      uint32 Start = 2;
      uint32 Stop = 3;
      uint32 Weekday = 4;
    }
    repeated LineTime LineTimes = 2;
    string Name = 3;
  }
  repeated Line Lines = 3;
}
